--- a/templates/register.html
+++ b/templates/register.html
@@ -14,7 +14,7 @@
                     <span class="card-title">Dogs</span>
                     <div class="card-image">
                         <i class="material-icons card-icon">pets</i>
-                        <a value="dogs" href="{{ url_for('insert_dogs')}}"class="btn-floating btn-large halfway-fab waves-effect waves-light red pulse account-type"><i class="material-icons">add</i></a>
+                        <a value="dogs" class="btn-floating btn-large halfway-fab waves-effect waves-light red pulse account-type"><i class="material-icons">add</i></a>
                     </div>
                     <div class="card-content">
                         <p>Add new dog to the database</p>
@@ -58,129 +58,131 @@
                 </div>
             </div>
         </div>
-        <div class="row hide" id="dogs">
-            <form action="{{ url_for('insert_dog') }}" method="POST" class="col s12">
-                <div class="row">
-                    <div class="input-field col s6">
-                        <input id="breed" name="breed" type="text" class="validate" required>
-                        <label for="breed">Breed</label>
+        <div class="row">
+            <div class="row hide" id="dogs">
+                <form action="{{ url_for('insert_dog') }}" method="POST" class="col s12">
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <input id="dog_breed" name="dog_breed" type="text" class="validate" required>
+                            <label for="dog_breed">Breed</label>
+                        </div>
+                        <div class="input-field col s6">
+                            <input id="dog_name" name="dog_name" type="text" class="validate" required>
+                            <label for="dog_name">Name</label>
+                        </div>
                     </div>
-                    <div class="input-field col s6">
-                        <input id="first_name" name="first_name" type="text" class="validate" required>
-                        <label for="first_name">First Name</label>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <textarea id="dog_description" name="dog_description" class="materialize-textarea"></textarea>
+                            <label for="icon_telephone">Short description</label>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <textarea id="description" name="description" class="materialize-textarea"></textarea>
-                        <label for="icon_telephone">Short description</label>
+                    <div class="row">
+                        <button class="btn waves-effect waves-light" type="submit" name="action">Create Account
+                            <i class="material-icons right">playlist_add</i>
+                        </button>
                     </div>
-                </div>
-                <div class="row">
-                    <button class="btn waves-effect waves-light" type="submit" name="action">Create Account
-                        <i class="material-icons right">playlist_add</i>
-                    </button>
-                </div>
-            </form>
-        </div>
-        <div class="row hide" id="users">
-            <form action="{{ url_for('insert_user') }}" method="POST" class="col s12">
-                <div class="row">
-                    <div class="input-field col s6">
-                        <input id="first_name" name="first_name" type="text" class="validate" required>
-                        <label for="first_name">First Name</label>
+                </form>
+            </div>
+            <div class="row hide" id="users">
+                <form action="{{ url_for('insert_user') }}" method="POST" class="col s12">
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <input id="user_first_name" name="user_first_name" type="text" class="validate" required>
+                            <label for="user_first_name">First Name</label>
+                        </div>
+                        <div class="input-field col s6">
+                            <input id="user_last_name" name="user_last_name" type="text" class="validate">
+                            <label for="user_last_name">Last Name</label>
+                        </div>
                     </div>
-                    <div class="input-field col s6">
-                        <input id="last_name" name="last_name" type="text" class="validate">
-                        <label for="last_name">Last Name</label>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input id="password" name="password" type="password" class="validate">
+                            <label for="password">Password</label>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <input id="password" name="name" type="password" class="validate">
-                        <label for="password">Password</label>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input id="user_email" name="user_email" type="email" class="validate">
+                            <label for="user_email">Email</label>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <input id="email" name="email" type="email" class="validate">
-                        <label for="email">Email</label>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <textarea id="user_description" name="user_description" class="materialize-textarea"></textarea>
+                            <label for="user_description">Bio</label>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <textarea id="description" name="description" class="materialize-textarea"></textarea>
-                        <label for="icon_telephone">Bio</label>
+                    <div class="row">
+                        <button class="btn waves-effect waves-light" type="submit" name="action">Create Account
+                            <i class="material-icons right">playlist_add</i>
+                        </button>
                     </div>
-                </div>
-                <div class="row">
-                    <button class="btn waves-effect waves-light" type="submit" name="action">Create Account
-                        <i class="material-icons right">playlist_add</i>
-                    </button>
-                </div>
-            </form>
-        </div>
-        <div class="row hide" id="services">
-            <form action="{{ url_for('insert_service') }}" method="POST" class="col s12">
-                <div class="row">
-                    <div class="input-field col s6">
-                        <input id="first_name" name="first_name" type="text" class="validate" required>
-                        <label for="first_name">First Name</label>
+                </form>
+            </div>
+            <div class="row hide" id="services">
+                <form action="{{ url_for('insert_service') }}" method="POST" class="col s12">
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <input id="service_first_name" name="service_first_name" type="text" class="validate" required>
+                            <label for="service_first_name">First Name</label>
+                        </div>
+                        <div class="input-field col s6">
+                            <input id="service_last_name" name="service_last_name" type="text" class="validate">
+                            <label for="service_last_name">Last Name</label>
+                        </div>
                     </div>
-                    <div class="input-field col s6">
-                        <input id="last_name" name="last_name" type="text" class="validate">
-                        <label for="last_name">Last Name</label>
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <input id="type_of_service" name="type_of_service" type="text" class="validate" required>
+                            <label for="first_name">Type of service</label>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="input-field col s6">
-                        <input id="type_of_service" name="type_of_service" type="text" class="validate" required>
-                        <label for="first_name">Type of service</label>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <textarea id="service_description" name="service_description" class="materialize-textarea"></textarea>
+                            <label for="service_description">Short description</label>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <textarea id="description" name="description" class="materialize-textarea"></textarea>
-                        <label for="icon_telephone">Short description</label>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input id="service_email" name="service_email" type="email" class="validate">
+                            <label for="service_email">Email</label>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <input id="email" name="email" type="email" class="validate">
-                        <label for="email">Email</label>
+                    <div class="row">
+                        <button class="btn waves-effect waves-light" type="submit" name="action">Create Account
+                            <i class="material-icons right">playlist_add</i>
+                        </button>
                     </div>
-                </div>
-                <div class="row">
-                    <button class="btn waves-effect waves-light" type="submit" name="action">Create Account
-                        <i class="material-icons right">playlist_add</i>
-                    </button>
-                </div>
-            </form>
-        </div>
-        <div class="row hide" id="stores">
-            <form action="{{ url_for('insert_store') }}" method="POST" class="col s12">
-                <div class="row">
-                    <div class="input-field col s12">
-                        <input id="store_name" name="store_name" type="text" class="validate">
-                        <label for="store_name">Store Name</label>
+                </form>
+            </div>
+            <div class="row hide" id="stores">
+                <form action="{{ url_for('insert_store') }}" method="POST" class="col s12">
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input id="store_name" name="store_name" type="text" class="validate">
+                            <label for="store_name">Store Name</label>
+                        </div>
+                        <div class="input-field col s6">
+                            <input id="store_address" name="store_address" type="text" class="validate" required>
+                            <label for="store_addres">Store Address</label>
+                        </div>
                     </div>
-                    <div class="input-field col s6">
-                        <input id="store_address" name="store_address" type="text" class="validate" required>
-                        <label for="store_addres">Store Address</label>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <textarea id="store_description" name="store_description" class="materialize-textarea"></textarea>
+                            <label for="store_description">Short description</label>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <textarea id="description" name="description" class="materialize-textarea"></textarea>
-                        <label for="icon_telephone">Short description</label>
+                    <div class="row">
+                        <button class="btn waves-effect waves-light" type="submit" name="action">Create Account
+                            <i class="material-icons right">playlist_add</i>
+                        </button>
                     </div>
-                </div>
-                <div class="row">
-                    <button class="btn waves-effect waves-light" type="submit" name="action">Create Account
-                        <i class="material-icons right">playlist_add</i>
-                    </button>
-                </div>
-            </form>
+                </form>
+            </div>
         </div>
     </div>
 </div>  
