--- a/templates/forms/services/edit-service.html
+++ b/templates/forms/services/edit-service.html
@@ -2,29 +2,29 @@
     <form action="{{ url_for('update_entry', usr_type='services', usr_id=service._id) }}" method="POST" class="col s12">
         <div class="row">
             <div class="input-field col s6">
-                <input name="service_first_name" type="text" class="validate" data-length="40" required>
+                <input name="service_first_name" type="text" class="validate" data-length="40">
                 <label for="service_first_name">First Name</label>
             </div>
             <div class="input-field col s6">
-                <input name="service_last_name" type="text" class="validate" data-length="40" required>
+                <input name="service_last_name" type="text" class="validate" data-length="40">
                 <label for="service_last_name">Last Name</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <input name="_email" type="email" class="validate" data-length="40" required>
+                <input name="_email" type="email" class="validate" data-length="40">
                 <label for="_email">Email</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <input name="password" type="password" class="validate" data-length="40" required>
+                <input name="password" type="password" class="validate" data-length="40">
                 <label for="password">Password</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s6">
-                <input name="type_of_service" type="text" class="validate" data-length="40" required>
+                <input name="type_of_service" type="text" class="validate" data-length="40">
                 <label for="first_name">Type of service</label>
             </div>
             <div class="input-field col s6">
@@ -44,13 +44,13 @@
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <textarea name="service_description" class="materialize-textarea" data-length="400" required></textarea>
+                <textarea name="service_description" class="materialize-textarea" data-length="400"></textarea>
                 <label for="service_description">Short description</label>
             </div>
         </div>
         <div class="row">
-            <button class="btn waves-effect waves-light" type="submit">Create Account
-                <i class="material-icons right">playlist_add</i>
+            <button class="btn waves-effect waves-light" type="submit">Update
+                <i class="material-icons right">check</i>
             </button>
         </div>
     </form>
