--- a/templates/forms/stores/feedback-store.html
+++ b/templates/forms/stores/feedback-store.html
@@ -1,6 +1,9 @@
 <div class="form-box hide" id="{{ store._id }}" value="feedback">
     <form action="{{ url_for('user_feedback', usr_type='stores', receiver_id=store._id) }}" method="POST"
         class="col s12">
+        <h2 class="heading-text">Tell us!</h2>
+        <p class="secondary-text center">Leave your feedback for this store.</p>
+        <p class="center">Your feedback is very important to us and to other users, helping them with their choices!</p>
         <div class="row">
             <div class="col s6">
                 <label>
